# spatialized-real-time-neural-network

./: .gitignore  Makefile  brain  valSup.supp
matrix/: CMakeLists.txt  Makefile
matrix/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
matrix/lib/byteobject/: ByteObject.cpp  ByteObject.hh  ByteObject.hpp  ByteObject.tcc
matrix/src/: launcher.cpp  launcher.hpp  main.cpp
matrix/src/auto_init/: main.cpp  main.hpp
matrix/src/display/: window.cpp  window.hpp
matrix/src/display/panel/: layer_display.cpp  layer_display.hpp  menu.cpp  menu.hpp  scene_tabs.cpp  scene_tabs.hpp  toolbar.cpp  toolbar.hpp
matrix/src/display/widgets/generic/: plot.cpp  plot.hpp
matrix/src/display/widgets/inspector/: inspector.cpp  inspector.hpp  object_list.cpp  object_list.hpp
matrix/src/display/widgets/live_analyzer/: display.cpp  display.hpp  group.cpp  group.hpp  value.cpp  value.hpp
matrix/src/display/widgets/viewer/: scene.cpp  scene.hpp  view.cpp  view.hpp
matrix/src/engine/: group.cpp  group.hpp  layer.cpp  layer.hpp  object.hpp  project.cpp  project.hpp
matrix/src/engine/data/: data_source.hpp  dynamic_data.cpp  dynamic_data.hpp  static_data.cpp  static_data.hpp
matrix/src/engine/data_inspect/: data_source.hpp  static_data.cpp  static_data.hpp
matrix/src/engine/dataset/: dataset.cpp  dataset.hpp  tensor.cpp  tensor.hpp
matrix/src/engine/dataset/loaders/: mnist_loader.cpp  mnist_loader.hpp
matrix/src/engine/layers/: group.cpp  group.hpp  object.cpp  object.hpp
matrix/src/engine/layers/any/: input_holder.cpp  input_holder.hpp
matrix/src/engine/layers/data/: data_object.cpp  data_object.hpp  dataset.cpp
matrix/src/engine/layers/network/: dataset_input.hpp  input_holder.cpp  input_holder.hpp  integrate_fire.cpp  integrate_fire.hpp  network_object.cpp  network_object.hpp  random.cpp  random.hpp  sin.cpp  sin.hpp
matrix/src/engine/math/: losses.cpp  losses.hpp  voltage_ode.cpp  voltage_ode.hpp
matrix/src/engine/objects/: group.cpp  group.hpp
matrix/src/engine/objects/data/: dataset.cpp  dataset.hpp
matrix/src/engine/objects/network/: dataset_entry.cpp  dataset_entry.hpp  dataset_input.cpp  dataset_input.hpp  integrate_fire.cpp  integrate_fire.hpp  loss.cpp  loss.hpp  network_object.cpp  network_object.hpp  random.cpp  sin.cpp
matrix/src/engine/time/: delta.cpp  delta.hpp
matrix/src/helpers/: debug.hpp
matrix/src/server/: blueprint.cpp  blueprint.hpp  client.cpp  client.hpp  display_server.cpp  display_server.hpp  protocol.hpp
matrix/src/server/controllers/: command.cpp  controllers.hpp  create.cpp  read.cpp
matrix/src/workspace/: main.cpp  mnist.cpp  plot_test.cpp  sinviz.cpp  ui_test.cpp  workspace.hpp  ws.cpp
matrix/src/workspace/empty/: empty.cpp  empty.hpp
matrix/src/workspace/main/: main.cpp  main.hpp
matrix/src/workspace/plot_test/: plot_test.cpp  plot_test.hpp
matrix/src/workspace/sinviz/: sinviz.cpp  sinviz.hpp
matrix/src/workspace/ui/: ui_test.cpp  ui_test.hpp
src/: UniTree.hpp  main.cpp  main.hpp
train_environnement/asteroid/: Makefile  eve  log  main.c  ray_colide.txt  save.eve
train_environnement/asteroid/include/: my.h
train_environnement/asteroid/lib/evolve/: Makefile  evolve.h  learning2.c
train_environnement/asteroid/lib/my/: Makefile  menu.h  my_compute_power_it.c  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_printf.c  my_printf_f1.c  my_printf_f3.c  my_put_nbr.c  my_sort_int_array.c  my_str_islower.c  my_strdup.c  nmatch.c  screen.h
train_environnement/asteroid/lib/my/btr/: btr_init.c  btr_insert.c
train_environnement/asteroid/lib/my/csfml/: draw.c  my_draw_circle.c  my_draw_lines.c  my_draw_rect.c  my_draw_square.c  my_menu.c
train_environnement/asteroid/lib/my/lld/: lld_db.c  lld_print_str.c
train_environnement/asteroid/lib/my/mat/: mat2.c  mat_inv.c  mat_rr.c  mat_t.c  mat_tt.c
train_environnement/race/: Makefile  eve  main.c  save.eve
train_environnement/race/lib/my/: gen_tree.c  get_next_line.c  get_next_line.h  my.h  my_find.c  my_print_alpha.c  my_print_revalpha.c  my_printf_f2.c  my_putchar.c  my_putnbr_base.c  my_putstr.c  my_revstr.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strlen.c  my_strncpy.c  screen.h
train_environnement/race/lib/my/csfml/: buffer.c  draw.c  my_draw_circle.c  my_draw_lines.c  my_draw_rect.c
train_environnement/race/lib/my/lld/: lld_init.c  lld_print_int.c
train_environnement/race/lib/my/mat/: mat.c  mat_r.c
